--- a/Barcode_Generator/Barcode_Generator.csproj
+++ b/Barcode_Generator/Barcode_Generator.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BarCode" Version="2022.8.8024" />
     <PackageReference Include="BarcodeLib" Version="2.4.0" />
   </ItemGroup>
 
